force-app/main/default/objects/JobOpening__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the Account with which this job is associated. Search via Lookup or create New</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Openings</relationshipLabel>
    <relationshipName>Job_Openings</relationshipName>
    <type>Lookup</type>
</CustomField>