force-app/main/default/objects/JobOpening__c/fields/CTOPosition__c.field-meta.xml
<CustomField>
    <fullName>CTOPosition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the CTO Position, Select via Lookup or create New.</inlineHelpText>
    <label>CTO Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Job Openings</relationshipLabel>
    <relationshipName>Job_Openings</relationshipName>
    <type>Lookup</type>
</CustomField>