force-app/main/default/objects/JobOpening__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <inlineHelpText>Enter in detail about the Job Description, Roles, responsibilities and key requirements.</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>